--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mark</title>
+    <title>Mark | Home | WDD130</title>
+    <link herf="styles/styles.css" rel="styles"
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="index.html">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting siteplan</a>
+            <a href="positioning.html">Positioning Activity</a>
+            <a href="#">Personal Website</a>
+            <a herf="#">Personal Siteplan</a>
+        </nav>
+        <main>
+        <h1>Mark Christensen | WDD130 projects</h1>
+         <img src="sun pic 2.jpg" width="400" height="560" alt="a self pic"
+        </main>
+         <p>I'm from Tri-cities, Washington. I enjoy skiing, camping, hiking, and cooking.</p>
+         <p>I am a CS major, hoping to go into cybersecurity.</p>
+    </header>
 </body>
 </html>
