--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mark | Home | WDD130</title>
-    <link herf="styles/styles.css" rel="styles"
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="index.html">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting siteplan</a>
-            <a href="positioning.html">Positioning Activity</a>
-            <a href="#">Personal Website</a>
-            <a herf="#">Personal Siteplan</a>
-        </nav>
-        <main>
-        <h1>Mark Christensen | WDD130 projects</h1>
-         <img src="sun pic 2.jpg" width="400" height="560" alt="a self pic"
-        </main>
-         <p>I'm from Tri-cities, Washington. I enjoy skiing, camping, hiking, and cooking.</p>
-         <p>I am a CS major, hoping to go into cybersecurity.</p>
-    </header>
-</body>
+   <head>
+       <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <title>Mark | WDD130 | Home</title>
+       <link href="styles/styles.css" rel="stylesheet">
+   </head>
+   <body>
+       <div id="content">
+           <header>
+               <nav>
+                   <a class="nav_link" href="wwr/index.html">WWR Website</a>
+                   <a class="nav_link" href="wwr/site-plan-rafting.html">WWR Siteplan</a>
+                   <a class="nav_link" href="positioning.html">Positioning Activity</a>
+                   <a class="nav_link" href="#">Personal Website</a>
+                   <a class="nav_link" href="#">Personal Siteplan</a>
+               </nav> 
+           </header>
+           <main>
+               <h1 id="main_title">Mark Christensen</h1>
+               <img src="sun pic 2.jpg" alt="a cute clipart trolley blue"> 
+
+               <p>I'm from Tri-cities, Washington.</p>
+               <h3 id="sub_title">This is a sub title</h3> 
+               <p>I enjoy skiing, camping, hiking, and cooking. And <a href="http://www.google.com">googling. </a></p>
+           </main>
+           <footer>
+               <p>Copyright 2024 - Mark Christensen - 
+                   <a href="https://www.churchofjesuschrist.org" target="_blank">Favorite Site</a>
+               </p>
+           </footer>
+       </div>
+   </body>
 </html>
