--- a/wwr/index.html
+++ b/wwr/index.html
@@ -66,7 +66,7 @@
                 <a href="https://twitter.com" target="_blank">
                     <img src="images/twitter.png" alt="twitter icon">
                 </a>
-                <a href="https://instagram.com" target="_black">
+                <a href="https://instagram.com" target="black">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
