--- a/laundry/site-plan.html
+++ b/laundry/site-plan.html
@@ -96,10 +96,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Washer Steps <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Dryer Steps  <!-- change this -->
         </div>
 
         <div class="top">
@@ -121,29 +121,38 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Doing laundry is a chore that every independent person has to do at some point. You'll want to prepare by gathering supplies and sorting your laundry, treating stains, and choosing the correct wash cycle and temperature for your load. Finally, you'll need to dry your laundry according to the fabric type of each item in your load. No more will you have clothes changing colors and shrinking. Knowing how to do laundry will help you take care of your own clothing. You'll learn to plan when to start a load, fold, and put away clothes efficiently.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="imgs/rsz_title_laundry-logos.jpg" alt="Main Logo image">
+        <img src="imgs/laundry main 2.png" alt="Main Logo image 2">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Washer Steps</h3>
       <p>
-        [Written copy for the Page 2 here]
+        1. Separate your clothes into whites, lights, and darks.
+        2. Treat stains with detergent immediately.
+        3. Add detergent to the sliding drawer on a front-loading machine or to the tub of a top-loading machine.
+        4. Add the right amount of detergent according to the package instructions.
+        5. Use cold water most of the time or hot water only for very dirty laundry.
+        6. Don't overfill the machine when you add your load. Around 3/4's full. 
+        7. Set a timer and return to switch your laundry. You don't want to leave your clothes in the washer for too long.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="imgs/washer.png" alt="image of washer">
+        <img src="imgs/wahser format.png" alt="image of format">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Dryer Steps</h3>
       <p>
-        [Written copy for the Page 3 here]
+        1. Remove lint from the lint trap before drying each load.
+        2. 1 washer load = 1 dryer load.
+        3. Use dryer sheets for softer, static-free clothes.
+        4. Set a timer and return to switch your laundry.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="imgs/bin.png" alt="image of bin">
+        <img src="imgs/rsz_folded_sweaters.jpg" alt="image for page3">
 
       </ul>
       <hr>
