--- a/laundry/site-plan.html
+++ b/laundry/site-plan.html
@@ -166,19 +166,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="imgs/Homewireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Washer</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="imgs/Washerwireframe.png" alt="Washer wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Dryer</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="imgs/Dryerwireframe.png" alt="Dryer wireframe">
     </main>
   </body>
 
