--- a/wwr/FAQ.html
+++ b/wwr/FAQ.html
@@ -16,7 +16,7 @@
                 <a href="index.html">Home</a>
                 <a href="#">Page 2</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contasctus.html">Contact Us</a>
+                <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <main class="FAQ-grid">
