--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -14,7 +14,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="FAQ.html">Page 2</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contasctus.html">Contact Us</a>
             </nav>
