--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -91,8 +91,8 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="index.html">Home</a>
-      <a href="#">Page2</a>
-      <a href="#">Contact Us</a>
+      <a href="FAQ.html">Page2</a>
+      <a href="contactus.html">Contact Us</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
