--- a/laundry/dryer.html
+++ b/laundry/dryer.html
@@ -40,16 +40,16 @@
         <footer>
             <p>&copy;2024 How to do Laundry</p>
             <p><a href="index.html">Home</a></p>
-            <p><a href="dryer.html">Page 3</a></p>
+            <p><a href="dryer.html">Page 2</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="imgs/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="imgs/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="black">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="imgs/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
