--- a/laundry/index.html
+++ b/laundry/index.html
@@ -66,13 +66,13 @@
             <p><a href="dryer.html">Page 3</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="imgs/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="imgs/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="black">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="imgs/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
