--- a/laundry/index.html
+++ b/laundry/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
                 <img class="logo" src="imgs/laundrymain2.png" alt="main logo">
-                <h1>Spinzo</h1>
             </a>
+            <h1>Spinzo</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="washer.html">Page 2</a>
@@ -20,8 +20,12 @@
             </nav>
         </header>
         <main class="home-grid">
-            <img class="Learn" src="imgs/rsz_title_laundry-logos.jpg" alt="Learn How">
-            <p>Doing laundry is a chore that every independent person has to do at some point. You'll want to prepare by gathering supplies and sorting your laundry, treating stains, and choosing the correct wash cycle and temperature for your load. Finally, you'll need to dry your laundry according to the fabric type of each item in your load. No more will you have clothes changing colors and shrinking. Knowing how to do laundry will help you take care of your own clothing. You'll learn to plan when to start a load, fold, and put away clothes efficiently.</p>
+            <section>
+                <div id="begin">
+                    <img class="learn" src="imgs/titlelaundry-logos.jpeg" alt="Learn How">
+                    <p>Doing laundry is a chore that every independent person has to do at some point. You'll want to prepare by gathering supplies and sorting your laundry, treating stains, and choosing the correct wash cycle and temperature for your load. Finally, you'll need to dry your laundry according to the fabric type of each item in your load. No more will you have clothes changing colors and shrinking. Knowing how to do laundry will help you take care of your own clothing. You'll learn to plan when to start a load, fold, and put away clothes efficiently.</p>
+                </div>
+            </section>
             <section>
                 <h2>Learn Here at Spinzo</h2>
                 <div id="grid-card-view">
