--- a/laundry/washer.html
+++ b/laundry/washer.html
@@ -3,35 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Washer</title>
-    <link rel="stylesheet" href="">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
                 <img class="logo" src="imgs/laundrymain2.png" alt="main logo">
-                <h1>Spinzo</h1>
             </a>
+            <h1>Spinzo</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="washer.html">Page 2</a>
                 <a href="dryer.html">Page 3</a>
             </nav>
         </header>
-        <main class="page2-grid">
+        <main class="home-grid">
             <div id="Washer-steps">
+                <img class="washers" src="imgs/wahser-format.png" alt="washers">
                 <h2>How to start washing</h2>
-                <img class="logo" src="imgs/washer.png" alt="main logo">
-                <p>
-                    1. Separate your clothes into whites, lights, and darks. 
-                    2. Treat stains with detergent immediately. 
-                    3. Add detergent to the sliding drawer on a front-loading machine or to the tub of a top-loading machine. 
-                    4. Add the right amount of detergent according to the package instructions. 
-                    5. Use cold water most of the time or hot water only for very dirty laundry. 
-                    6. Don't overfill the machine when you add your load. Around 3/4's full. 
-                    7. Set a timer and return to switch your laundry. You don't want to leave your clothes in the washer for too long. 
-                </p>
+                <img class="logo1" src="imgs/washer.png" alt="main logo">
+                <p>Washing steps</p>
+                <ol class="list">
+                    <li>Separate your clothes into whites, lights, and darks.</li>
+                    <li>Treat stains with detergent immediately.</li>
+                    <li>Add detergent to the sliding drawer on a front-loading machine or to the tub of a top-loading machine.</li>
+                    <li>Add the right amount of detergent according to the package instructions.</li>
+                    <li>Use cold water most of the time or hot water only for very dirty laundry.</li>
+                    <li>Don't overfill the machine when you add your load. Around 3/4's full.</li>
+                    <li>Set a timer and return to switch your laundry. You don't want to leave your clothes in the washer for too long.</li>
+                </ol>
             </div>
             <div class="need-help">
                 <h2>Need help? Contact us here.</h2>
