--- a/laundry/dryer.html
+++ b/laundry/dryer.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Dryer</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
                 <img class="logo" src="imgs/laundrymain2.png" alt="main logo">
-                <h1>Spinzo</h1>
             </a>
+            <h1>Spinzo</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="washer.html">Page 2</a>
                 <a href="dryer.html">Page 3</a>
             </nav>
         </header>
-        <main class="page2-grid">
+        <main class="home-grid">
             <div id="dryer-steps">
+                <img class="bin" src="imgs/bin.png" alt="washers">
                 <h2>How to start drying</h2>
-                <img class="logo" src="imgs/rsz_folded_sweaters.jpg" alt="main logo">
-                <p>
-                    1. Remove lint from the lint trap before drying each load.
-                    2. 1 washer load = 1 dryer load.
-                    3. Use dryer sheets for softer, static-free clothes.
-                    4. Set a timer and return to switch your laundry.
-                </p>
+                <img class="folded" src="imgs/rsz_folded_sweaters.jpg" alt="main logo">
+                <p>Washing steps</p>
+                <ol class="list">
+                    <li>Remove lint from the lint trap before drying each load.</li>
+                    <li>1 washer load = 1 dryer load.</li>
+                    <li>Use dryer sheets for softer, static-free clothes.</li>
+                    <li>Set a timer and return to switch your laundry.</li>
+                </ol>
             </div>
             <div class="need-help">
                 <h2>Need help? Contact us here.</h2>
