--- a/laundry/index.html
+++ b/laundry/index.html
@@ -15,8 +15,8 @@
             <h1>Spinzo</h1>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="washer.html">Page 2</a>
-                <a href="dryer.html">Page 3</a>
+                <a href="washer.html">Washer</a>
+                <a href="dryer.html">Dryer</a>
             </nav>
         </header>
         <main class="home-grid">
@@ -64,8 +64,8 @@
         </main>
         <footer>
             <p>&copy;2024 How to do Laundry</p>
-            <p><a href="washer.html">Page 2</a></p>
-            <p><a href="dryer.html">Page 3</a></p>
+            <p><a href="washer.html">Washer</a></p>
+            <p><a href="dryer.html">Dryer</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="imgs/facebook.png" alt="fb icon">
