--- a/laundry/washer.html
+++ b/laundry/washer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Page Washer</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -15,8 +15,8 @@
             <h1>Spinzo</h1>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="washer.html">Page 2</a>
-                <a href="dryer.html">Page 3</a>
+                <a href="washer.html">Washer</a>
+                <a href="dryer.html">Dryer</a>
             </nav>
         </header>
         <main class="home-grid">
@@ -45,7 +45,7 @@
         <footer>
             <p>&copy;2024 How to do Laundry</p>
             <p><a href="index.html">Home</a></p>
-            <p><a href="dryer.html">Page 3</a></p>
+            <p><a href="dryer.html">Dryer</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="imgs/facebook.png" alt="fb icon">
